--- a/graph/arpdau.htm
+++ b/graph/arpdau.htm
@@ -13,7 +13,7 @@
     document.getElementById("graphdiv2"),
     ARPDAU, 
     {
-      sigFigs: 8,
+      //sigFigs: 8,
       rollPeriod: 1,
       showRoller: true,
       includeZero: true,
